Removed unused example folder, Added FB login functionality

--- a/ApplicationCode/res/values/strings.xml
+++ b/ApplicationCode/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="unsubscribe_string">Unsubscribe</string>
     <string name="selected">Selected</string>
     <string name="submit_preference">Submit Preference</string>
+    <string name="app_id">517969238299772</string>
+    <string name="title_activity_main">MainActivity</string>
 
 </resources>
