--- a/ApplicationCode/res/values/strings.xml
+++ b/ApplicationCode/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="app_id">517969238299772</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="batchRequest">Batch Request</string>
+    <string name="title_activity_rss_reader">RssReaderActivity</string>
 
 </resources>
