--- a/ApplicationCode/res/values/strings.xml
+++ b/ApplicationCode/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="batchRequest">Batch Request</string>
     <string name="title_activity_rss_reader">RssReaderActivity</string>
+    <string name="title_route_list">Routes</string>
+    <string name="title_route_detail">Route Detail</string>
 
 </resources>
